test/files/neg/bug668.check
bug668.scala:1: error: type Iterable takes type parameters
class Test extends Iterable
                   ^
one error found
